--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WordVenture2">
         <activity
+            android:name=".LocalMatch"
+            android:exported="false" />
+        <activity
             android:name=".StartMultiplayerMatch"
             android:exported="false" />
         <activity
