--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
         <activity
             android:name=".ProfileActivity"
             android:exported="true" />
+
+        <service android:name=".BackgroundMusicService" />
+
     </application>
 
 
