--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,10 @@
             android:name=".LanguageActivity"
             android:exported="true" />
 
+        <activity
+            android:name=".ProfilePhotoActivity"
+            android:exported="true" />
+
         <service android:name=".BackgroundMusicService" />
 
     </application>
